2004-01-20  Not Zed  <NotZed@Ximian.com>

	** See bug #52817.

	* camel-session.c (camel_session_get_password): merged reprompt
	and secret into a flags field, and add more options.  Fixed all
	callers.

	** See bug #52899.

	* camel-gpg-context.c (gpg_ctx_parse_status): use need_id as the
	password key, not userid.

2004-01-19  Siviaah Nallagatla <snallagatla@novell.com>
                                                                                                                             
        * providers/groupwise/camel-gw-listener.c ( remove_calender_tasks_sources,
        modify_calender_tasks_sources) : add port and "/soap" to source uri

2004-01-19  Not Zed  <NotZed@Ximian.com>

	* camel-vee-store.c (change_folder): use a CamelURL to properly
	encode the url we generate.
	(vee_get_folder_info): ditto.
	(vee_get_folder_info): removed unused variable/warning.

	* camel-session.c (vee_provider): Update the provider flags for
	URL_FRAGMENT_IS_PATH.

	* providers/imapp/camel-imapp-utils.c (imap_parse_addfress_list):
	namespaces fixes for HEADER_ADDRESS*

2004-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-folder.c (imap_sync_online): Limit the
	flags we set (or unset) to the folder's permanent flags.

2004-01-16  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-message.c (camel_mime_message_build_mbox_from): Same.

	* camel-internet-address.c (internet_decode): Same.

	* camel-mime-utils.[c,h]: Namespaced camel_header_address_t enums
	s/HEADER_ADDRESS_/CAMEL_HEADER_ADDRESS_/g

2004-01-16 Sivaiah Nallagatla <snallagatla@novell.com>
	
	* providers/groupwise/camel-groupwise-provider.c: added some conf
	entries for LDAP address setup

	* providers/groupwise/camel-gw-listener.c: added
	add_ldap_addressbook_source, modify_ldap_addressbook_source,
	remove_ldap_addressbook_source functions for setting up LDAP
	address book. Also setting "username" property on cal/tasks
	ESources

2004-01-15  Not Zed  <NotZed@Ximian.com>
